Try to fix too large icons
Belongs to #4230

--- a/app/javascript/stylesheets/segment.css
+++ b/app/javascript/stylesheets/segment.css
@@ -18,6 +18,10 @@
         @apply hidden leading-tight font-light uppercase;
       }
 
+      svg {
+        font-size: 100%;
+      }
+
       &.inline {
         @apply flex-row justify-between;
 
